--- a/report/sources.bib
+++ b/report/sources.bib
@@ -92,3 +92,12 @@
   year={2008},
   publisher={Now Publishers Inc.}
 }
+
+@inproceedings{memetracker,
+  title={Meme-tracking and the dynamics of the news cycle},
+  author={Leskovec, J. and Backstrom, L. and Kleinberg, J.},
+  booktitle={Proceedings of the 15th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={497--506},
+  year={2009},
+  organization={ACM}
+}
