add a directory to scrape sa

--- a/report/report.tex
+++ b/report/report.tex
@@ -53,7 +53,7 @@ A unique aspect of open networks like reddit, digg, publications, \&c is that it
 
 In \cite{twitter_trend}, the authors identify \textit{bursty} keywords that suddently appear, and attempt to align them with trends - entire topics that are becoming more popular. They do this by analyzing new bursts in the queue. One thing we can do in this paper is look at each sub as a queue and see if bursts in one are followed by bursts in another.
 
-
+% OUR STORY; Learning social networks is important. Past att
 \subsection{Problem Statement}
 
 Given nodes $\mathcal{D}$ with overlapping connections $\mathcal{C}$ via shared users, predict topic vector $v_{d,t+1}$ in document collection $d$ at time $t+1$ given the topics $V$ in all documents at time $t$?
