--- a/report/report.tex
+++ b/report/report.tex
@@ -134,7 +134,7 @@ Perhaps counter-intuitively, the \textit{stackoverflow} subsite has two orders o
 \centering
 \includegraphics[width=\textwidth]{stackexchange.pdf}
 \caption{Graph inferred from the 28 StackExchange subsites.}
-\label{fig:reddit}
+\label{fig:stackexchange}
 \end{figure}
 
 \subsubsection{SomethingAwful}
