worked on report

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,9 +1,7 @@
 \documentclass{article} % For LaTeX2e
 \usepackage{nips12submit_e,times}
-%\documentstyle[nips12submit_09,times,art10]{article} % For LaTeX 2.09
 \usepackage{amsmath,amsthm,amssymb, dsfont}
-\usepackage{pgf}
-\usepackage{tikz}
+\usepackage{pgf, tikz}
 \def\I{\mathbb{I}}
 \usetikzlibrary{arrows,automata}
 
