--- a/report/sources.bib
+++ b/report/sources.bib
@@ -101,3 +101,22 @@
   year={2009},
   organization={ACM}
 }
+
+@article{biotechcollaboration,
+  title={Interorganizational collaboration and the locus of innovation: Networks of learning in biotechnology},
+  author={Powell, W.W. and Koput, K.W. and Smith-Doerr, L.},
+  journal={Administrative science quarterly},
+  pages={116--145},
+  year={1996},
+  publisher={JSTOR}
+}
+
+
+@inproceedings{measuresocial,
+  title={Measurement and analysis of online social networks},
+  author={Mislove, A. and Marcon, M. and Gummadi, K.P. and Druschel, P. and Bhattacharjee, B.},
+  booktitle={Proceedings of the 7th ACM SIGCOMM conference on Internet measurement},
+  pages={29--42},
+  year={2007},
+  organization={ACM}
+}
